feature/config-arch-components - setting up architecture component - adding the data layer and local caching config using room - using no actionbar theme

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,9 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
+    // Gson only
+    implementation 'com.google.code.gson:gson:2.9.0'
+
     // Kotlin Extensions and Coroutines support for Room
     implementation "androidx.room:room-ktx:$room_version"
 
