--- a/secret.properties
+++ b/secret.properties
@@ -1,4 +1,5 @@
-BASE_URL = "https://openexchangerates.org/api/"
+BASE_URL = "https://pastebin.com/"
+PLACEHOLDER_BASE = "https://jsonplaceholder.typicode.com/"
 NEW_EPISODES="z5AExTtw"
 CHANNELS="Xt12uVhM"
 CATEGORIES="A0CgArX3"
