--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,6 +105,10 @@ dependencies {
     // recyclerview snap helper
     implementation 'com.github.rubensousa:gravitysnaphelper:2.2.2'
 
+    // Glide image loader
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
+    kapt 'com.github.bumptech.glide:compiler:4.13.0'
+
     def jUnitVersion = "4.13.2"
     def androidXMockitoVersion = "4.2.0"
     // Required -- JUnit 4 framework
