--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,10 +119,15 @@ dependencies {
     testImplementation("org.mockito:mockito-inline:$androidXMockitoVersion")
     //For runBlockingTest, CoroutineDispatcher etc.
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1'
+    // retrofit mock
+    implementation 'com.squareup.retrofit2:retrofit-mock:2.6.2'
+    testImplementation "com.squareup.okhttp3:mockwebserver:4.9.1"
+
 
     // Instrument test dependencies
     // Testing Navigation UI
     androidTestImplementation("androidx.navigation:navigation-testing:$nav_version")
+
     // Testing using Hilt
     androidTestImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
     kaptAndroidTest "com.google.dagger:hilt-android-compiler:$hilt_version"
