--- a/app/build.gradle
+++ b/app/build.gradle
@@ -98,6 +98,11 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
 
+    // Room
+    implementation "androidx.room:room-runtime:$room_version"
+    kapt "androidx.room:room-compiler:$room_version"
+    api "androidx.room:room-ktx:$room_version"
+
     // recyclerview snap helper
     implementation 'com.github.rubensousa:gravitysnaphelper:2.2.2'
 
@@ -128,6 +133,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit-mock:2.6.2'
     testImplementation "com.squareup.okhttp3:mockwebserver:4.9.1"
 
+    // room test
+    testImplementation "androidx.room:room-testing:$room_version"
 
     // Instrument test dependencies
     // Testing Navigation UI
