--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
         kotlin_version = '1.6.21'
         hilt_version = '2.40.5'
         nav_version = '2.4.2'
+        room_version = '2.4.2'
         okhttp_log_intercepter = '5.0.0-alpha.2'
         okhttp_profile_intercepter = '1.0.8'
     }
