--- a/app/build.gradle
+++ b/app/build.gradle
@@ -134,16 +134,18 @@ dependencies {
     // Testing using Hilt
     androidTestImplementation "com.google.dagger:hilt-android-testing:$hilt_version"
     kaptAndroidTest "com.google.dagger:hilt-android-compiler:$hilt_version"
+    kaptAndroidTest 'androidx.hilt:hilt-compiler:1.0.0'
     //For runBlockingTest, CoroutineDispatcher etc.
     androidTestImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.ext:truth:1.4.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
-    androidTestImplementation "org.robolectric:robolectric:4.8.1"
+    //androidTestImplementation "org.robolectric:robolectric:4.5.1"
 
     // debug impl
-    debugImplementation("androidx.fragment:fragment-testing:1.5.0-rc01")
+    debugImplementation "androidx.fragment:fragment-testing:1.3.0-alpha08"
+    //debugImplementation("androidx.fragment:fragment-testing:1.5.0-rc01")
     debugImplementation("androidx.fragment:fragment-ktx:1.5.0-rc01")
     debugImplementation("androidx.test:core:1.4.0")
     debugImplementation("androidx.test:rules:1.4.0")
